service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-namespace
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
    - port: 80          # service port
      targetPort: 8000 # container/app port
